Block private network access for singleuser pods by default
This PR enables all traffic to the *internet* from user pods,
but restricts all access to the private network where other
kubernetes pods or services may be running. Meant to be a
minimally intrusive defense in depth mechanism that prevents
access to unsecured endpoints running on VMs, in the kubernetes
cluster, etc. For example, users often run Prometheus without
any kind of network protection in the same cluster as the
users, and access to prometheus can leak a lot of sensitive
user data.

https://www.wiz.io/blog/chaosdb-explained-azures-cosmos-db-vulnerability-walkthrough
shows the immense security value of restricting access to internal
network from user written code. Most software projects do not have
their authz/authn layers, and rely on network segmentation for
protection. When network segmentation fails like it does in the Azure security incident,
there is often no secondary line of defense.

Most JupyterHub users talk to the internet, but by default I think
nobody really talks to the *internal network*. This also only affects
network connections from user code - stuff like mounting NFS shares
are done by the kubelet, and hence are not affected. Connections
to hub infrastructure (proxy, hub, etc) are also not affected,
as they are separately allowed by other NetworkPolicy rules.

--- a/jupyterhub/templates/singleuser/netpol.yaml
+++ b/jupyterhub/templates/singleuser/netpol.yaml
@@ -77,6 +77,24 @@ spec:
         - protocol: TCP
           port: 53
 
+    {{- if .Values.singleuser.networkPolicy.noPrivateIPAccess }}
+    # Allow broad access to the external internet, but block all
+    # access to private IPs. This means users can access the internet but not
+    # (say) an unsecured prometheus server running in the same cluster. Given
+    # that not all charts have proper NetworkPolicies setup, this is a defense
+    # in depth measure that restricts the amount of damage someone could do if
+    # they get an unauthorized login into the hub system.
+    - to:
+        - ipBlock:
+            cidr: 0.0.0.0/0
+            except:
+              # Don't allow network access to private IP ranges
+              # Listed in https://datatracker.ietf.org/doc/html/rfc1918
+              - 10.0.0.0/8
+              - 172.16.0.0/12
+              - 192.168.0.0/16
+    {{- end }}
+
     {{- with .Values.singleuser.networkPolicy.egress }}
     # singleuser-server --> depends, but the default is everything
     {{- . | toYaml | nindent 4 }}
